--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_NAME=oshpaz
 APP_ENV=local
 APP_KEY=base64:FaOkPqZ7p5MKH+T1may4CZotN4C8f1qEIu+4ukuRHXE=
-APP_DEBUG=false
+APP_DEBUG=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
